[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/specialBlock.png" type="Texture" id=1]
[ext_resource path="res://Scripts/SpecialPlatform.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 4 )

[node name="SpecialPlatform" type="StaticBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -96, -16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 768.205, 128 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DetectionArea" type="Area2D" parent="."]
position = Vector2( 0, -20 )
__meta__ = {
"_edit_lock_": true
}

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
physics_interpolation_mode = 1
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpecialEffectTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="timeout" from="SpecialEffectTimer" to="." method="_on_SpecialEffectTimer_timeout"]
